gtkglsink: Hide and clean the GtkWindow we might create

When stopping the sink we should always hide the window.

https://bugzilla.gnome.org/show_bug.cgi?id=755249